--- a/teste.ipynb
+++ b/teste.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7fb90cf6-8b47-41b9-ad82-8127ea0bf69b",
    "metadata": {},
    "outputs": [],
@@ -46,21 +46,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ad4056f5-8da7-4fa7-a3cc-3e2bce8abbb0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oi\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Oi\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ea4ce740-fd03-4ad6-94ab-dc6071376379",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n"
+   ]
   },
   {
    "cell_type": "code",
