--- a/teste.ipynb
+++ b/teste.ipynb
@@ -74,19 +74,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b0b2c01e-faf1-4ee8-8242-c8a4007551cf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "já\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"já\")"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "775cf5d3-18dd-485a-9c32-7d927830b4ff",
+   "cell_type": "markdown",
+   "id": "1bc6702b-5b0b-45ee-8c8a-8ea9d38c9b40",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### teste"
+   ]
   }
  ],
  "metadata": {
